Fix layout shift on modal open

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -88,6 +88,10 @@
   }
 }
 
+html {
+  scrollbar-gutter: stable both-edges;
+}
+
 body {
   @apply bg-color--primary text-color--primary font-body transition-all duration-200;
   -webkit-tap-highlight-color: transparent;
